erDiagram
    YEARS ||--o{ MOVIES : "es el estreno de"
    MOVIES ||--o{ MOVIE_GENRES : "tiene"
    GENRES ||--o{ MOVIE_GENRES : "clasifica"
    MOVIES ||--o{ MOVIE_ACTORS : "tiene"
    ACTORS ||--o{ MOVIE_ACTORS : "participa en"

    MOVIES {
        BIGINT id PK
        VARCHAR title
        BIGINT release_year_id FK
    }

    YEARS {
        BIGINT id PK
        INTEGER year_value
    }

    GENRES {
        BIGINT id PK
        VARCHAR name
    }

    ACTORS {
        BIGINT id PK
        VARCHAR name
    }

    MOVIE_GENRES {
        BIGINT movie_id PK, FK
        BIGINT genre_id PK, FK
    }

    MOVIE_ACTORS {
        BIGINT movie_id PK, FK
        BIGINT actor_id PK, FK
    }
